--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "commander": "^2.11.0",
+    "handlebars": "^4.0.10",
     "kubernetes-client": "^3.16.0",
     "uuid": "^3.1.0",
     "yamljs": "^0.3.0"
